k3s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-fe-deployment
  namespace: xora
  labels:
    app: app-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-fe
  template:
    metadata:
      labels:
        app: app-fe
    spec:
      containers:
      - name: nginx-container
        image: REPLACE_WITH_IMAGE
        ports:
        - containerPort: 80
