k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-fe-service
  namespace: xora
spec:
  selector:
    app: app-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
